[gd_scene load_steps=4 format=3 uid="uid://hloqgxlpipav"]

[ext_resource type="Script" path="res://scripts/card_tag.gd" id="1_v74fi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qvuor"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3upve"]

[node name="CardTag" type="PanelContainer"]
offset_right = 91.0
offset_bottom = 31.0
script = ExtResource("1_v74fi")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 97.0
offset_bottom = 35.0
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
offset_left = 4.0
offset_top = 2.0
offset_right = 95.0
offset_bottom = 33.0

[node name="LineEdit" type="LineEdit" parent="MarginContainer/HBoxContainer" groups=["CTLineEdit"]]
offset_right = 69.0
offset_bottom = 31.0
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxEmpty_qvuor")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_3upve")
placeholder_text = "My Tag"
expand_to_text_length = true

[node name="RemoveTag" type="Button" parent="MarginContainer/HBoxContainer"]
offset_left = 73.0
offset_right = 91.0
offset_bottom = 31.0
text = "X"

[connection signal="focus_exited" from="MarginContainer/HBoxContainer/LineEdit" to="." method="line_edit_focus_exited"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/RemoveTag" to="." method="remove_tag_pressed"]
